src/objects/Album__c.object
<CustomObject>
    <fields>
        <fullName>Album_Art__c</fullName>
        <label>Album Art</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Artist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artist</label>
        <referenceTo>Artist__c</referenceTo>
        <relationshipLabel>Albums</relationshipLabel>
        <relationshipName>Albums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Track_Length__c</fullName>
        <formula>TEXT(FLOOR( (Duration_Seconds__c / Track_Count__c )/60))&amp;&quot;:&quot;&amp; TEXT(FLOOR(MOD( (Duration_Seconds__c/Track_Count__c) ,60)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Track Length</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cover_Art__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cover Art</label>
        <referenceTo>skuid__Image__c</referenceTo>
        <relationshipLabel>Albums</relationshipLabel>
        <relationshipName>Albums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_Seconds__c</fullName>
        <label>Duration Seconds</label>
        <summarizedField>Song__c.Duration_Seconds__c</summarizedField>
        <summaryForeignKey>Song__c.Album__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>TEXT(FLOOR( Duration_Seconds__c /60))&amp;&quot;:&quot;&amp; TEXT(MOD( Duration_Seconds__c ,60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levels_Achieved__c</fullName>
        <label>Levels Achieved</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Photo</label>
        <referenceTo>skuid__Image__c</referenceTo>
        <relationshipLabel>Albums (Photo)</relationshipLabel>
        <relationshipName>Albums1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Release_Year__c</fullName>
        <description>Calls the Year function on the release date so that we know how to use formula fields</description>
        <formula>TEXT(YEAR( Release_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spotify_URI__c</fullName>
        <label>Spotify URI</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Count__c</fullName>
        <label>Track Count</label>
        <summaryForeignKey>Song__c.Album__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Album</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Album Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Albums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>